# repotify

./: .gitignore  .gitmodules  CMakeLists.txt  app_config.json
repotify/: CMakeLists.txt
repotify/src/: main.cpp
src/: Domain.cpp  Domain.h  JsonReader.cpp  JsonReader.h  Project.cpp  Project.h  helpers.cpp  helpers.h  main.cpp
